@@ -139,7 +139,7 @@ QWT_VER=6.1.3
 
 PROJ_VER=4.9.3
 GDAL_VER=1.11.1
-OPENSCENEGRAPH_VER=3.4.1
+OPENSCENEGRAPH_VER=3.6.1
 OSGEARTH_VER=2.8
 
 EXIV2_VER=0.25
