@@ -140,7 +140,7 @@ QWT_VER=6.1.3
 
 PROJ_VER=5.0.0
 GDAL_VER=2.2.3
-OPENSCENEGRAPH_VER=3.4.1
+OPENSCENEGRAPH_VER=3.6.1
 OSGEARTH_VER=2.9
 
 EXIV2_VER=0.25
