@@ -197,6 +197,8 @@ ae8a9f468b7ee3822a62d20d356c69f2b32330a231e738ac2914f332766611b7  opencv-3.4.0.z
 24bda432eaace9e992322dcc3d30144cefa5314c2424d4aa02e5fe3fa9dd17bd  opencv-3.4.1.zip
 5c727d84755da276adf8c4a4a3a8ba9c9570fc4b4969f06f1d2e9f89b1e3040e  OpenSceneGraph-3.4.0.zip
 930eb46f05781a76883ec16c5f49cfb29a059421db131005d75bec4d78401fd5  OpenSceneGraph-3.4.1.tar.gz
+6f57134ea74a39f1c7b24c285e6278cf906c47f6c681573b86d12173a466efed  OpenSceneGraph-3.6.0.tar.gz
+777429556818184588ee5f2351fe262f105539bfc4393c373bc933025bd16a33  OpenSceneGraph-3.6.1.tar.gz
 b01abc28376b866515df58f1b004da8453166291783d4e7477cda89b000c1f01  openssl-0.9.8n.tar.gz
 2a9eb3cd4e8b114eb9179c0d3884d61658e7d8e8bf4984798a5f5bd48e325ebe  openssl-1.0.1c.tar.gz
 f74f15e8c8ff11aa3d5bb5f276d202ec18d7246e95f961db76054199c69c1ae3  openssl-1.0.1e.tar.gz
