@@ -138,7 +138,7 @@ QWT_VER=6.1.3
 
 PROJ_VER=4.9.3
 GDAL_VER=2.2.3
-OPENSCENEGRAPH_VER=3.4.1
+OPENSCENEGRAPH_VER=3.6.1
 OSGEARTH_VER=2.8
 
 EXIV2_VER=0.25
