@@ -8,6 +8,8 @@
 * Drop "-LTS" suffix from name of Ubuntu configs.
 * Update in all static configs:
   - OPENSSL_VER from 1.0.2n to 1.0.2o
+* Update in all configs:
+  - OPENSCENEGRAPH_VER from 3.4.1 to 3.6.1
 
 --- v3.1 (2018-03-21) ---
 * Delete package: vlc.
